--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <a class="nav-link" href="index1.html">HOW TO PLAY</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#contact">CONTACT</a>
+        <a class="nav-link" href="#contact">CONTACT US</a>
       </li>
     </ul>
   </div>
@@ -95,7 +95,7 @@
   <div class="container-fluid">
 
     <a href="https://www.facebook.com/mohd.aqibminai"><i class="fab fa-facebook-square icon fa-2x"></i></a>
-    <a href="mailto:someone@aqib.minai@gmail.com"><i class="fas fa-envelope icon fa-2x"></i></i></a>
+    <a href="mailto:@aqib.minai@gmail.com"><i class="fas fa-envelope icon fa-2x"></i></i></a>
     <a href="https://twitter.com/AqibMinai?s=08"><i class="fab fa-twitter icon fa-2x"></i></i></a>
 
 
